All elements present, need placement and alignment fixes

--- a/application/client/src/components/Home.css
+++ b/application/client/src/components/Home.css
@@ -14,7 +14,7 @@
 }
 
 .browse-button{
-    background-color: #FFFF62;
+    background-color: #FFFF8F;
     color: black;
     font-weight: bold;
     margin-top: 10px;
